--- a/packages/liquidation-sdk-viem/package.json
+++ b/packages/liquidation-sdk-viem/package.json
@@ -33,7 +33,7 @@
     "viem": "^2.0.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.3",
+    "@graphql-codegen/cli": "^6.1.0",
     "@graphql-codegen/import-types-preset": "^3.0.0",
     "@graphql-codegen/typescript": "^4.1.2",
     "@graphql-codegen/typescript-graphql-request": "^6.2.0",
@@ -45,6 +45,7 @@
     "@morpho-org/morpho-test": "workspace:^",
     "@morpho-org/morpho-ts": "workspace:^",
     "@morpho-org/test": "workspace:^",
+    "axios": "^1.12.0",
     "evm-maths": "^7.0.1",
     "executooor-viem": "^1.3.3",
     "fetch-mock": "^11.1.5",
@@ -52,6 +53,7 @@
     "hardhat": "^2.27.1",
     "nock": "^14.0.10",
     "typescript": "^5.9.3",
+    "undici": ">=5.29.0",
     "viem": "^2.41.2",
     "vitest": "^4.0.15"
   },
